--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 -f https://download.pytorch.org/whl/torch_stable.html
 streamlit
-torch==1.8.1+cpu 
-torchvision==0.9.1+cpu
-fastai>=2.3.1
+torch
+torchvision
+fastai
 ipywidgets
 voila
-pillow==8.2.0
+pillow
