--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ https://download.pytorch.org/whl/cpu/torch-1.8.1%2Bcpu-cp39-cp39-linux_x86_64.wh
 https://download.pytorch.org/whl/cpu/torchvision-0.9.1%2Bcpu-cp39-cp39-linux_x86_64.whl
 fastai
 streamlit
-torch+cpu 
-torchvision+cpu
+torch
+torchvision
 voila
 ipywidgets
