--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,1 @@
-https://download.pytorch.org/whl/cpu/torch-1.8.1%2Bcpu-cp39-cp39-linux_x86_64.whl
-https://download.pytorch.org/whl/cpu/torchvision-0.9.1%2Bcpu-cp39-cp39-linux_x86_64.whl
-fastai
-streamlit
-torch
-torchvision
-voila
-ipywidgets
+install --upgrade pip
