--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-
+-f https://download.pytorch.org/whl/torch_stable.html
+streamlit
+torch
+torchvision
+fastai>=2.3.1
+ipywidgets
+voila
+pillow==8.2.0
